tests/baselines/reference/parserShorthandPropertyAssignment4.errors.txt
parserShorthandPropertyAssignment4.ts(1,13): error TS1005: ':' expected.


==== parserShorthandPropertyAssignment4.ts (1 errors) ====
    var v = { 0 };
                ~
!!! error TS1005: ':' expected.